--- a/3.LibManagementApp/nbproject/project.properties
+++ b/3.LibManagementApp/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=3.LibManagementApp
+application.vendor=lenhh
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,22 @@ dist.jar=${dist.dir}/3.LibManagementApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/3.LibManagementApp
+endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=D:\\github\\jfreechart\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=D:\\github\\jfreechart\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\mon hoc\\NetBean\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-1=D:\\github\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.RSCalendar.jar=D:\\github\\RSCalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.1.0.jar}
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
+    ${file.reference.RSCalendar.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,8 +57,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -73,7 +84,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=3.LibManagementApp
-main.class=pkg3.libmanagementapp.LibManagementApp
+main.class=common.view.Test0
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
