--- a/3.LibManagementApp/nbproject/private/private.properties
+++ b/3.LibManagementApp/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Duc Anh\\AppData\\Roaming\\NetBeans\\19\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.mysql-connector-j-9.1.0.jar=D:\\github\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\lenhh\\AppData\\Roaming\\NetBeans\\19\\build.properties
