--- a/3.LibManagementApp/nbproject/private/private.properties
+++ b/3.LibManagementApp/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.mysql-connector-j-9.1.0.jar=D:\\github\\mysql-connector-j-9.1.0\\
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\lenhh\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\23\\build.properties
