--- a/3.LibManagementApp/nbproject/private/private.properties
+++ b/3.LibManagementApp/nbproject/private/private.properties
@@ -2,7 +2,11 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-j-9.1.0.jar=D:\\github\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.jcommon-1.0.23.jar=D:\\github\\Libraries\\jfreechart\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=D:\\github\\Libraries\\jfreechart\\jfreechart-1.0.19.jar
+file.reference.mysql-connector-j-9.1.0.jar=D:\\github\\Libraries\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-1=D:\\github\\Libraries\\mysql-connector-j-9.1.0.jar
+file.reference.RSCalendar.jar=D:\\github\\Libraries\\RSCalendar.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
