--- a/3.LibManagementApp/nbproject/project.properties
+++ b/3.LibManagementApp/nbproject/project.properties
@@ -36,10 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/3.LibManagementApp
 endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.23.jar=D:\\github\\jfreechart\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=D:\\mon hoc\\NetBean\\Libraries\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\github\\jfreechart\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=D:\\mon hoc\\NetBean\\Libraries\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\mon hoc\\NetBean\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=D:\\github\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-2=D:\\mon hoc\\NetBean\\Libraries\\mysql-connector-j-9.1.0.jar
 file.reference.RSCalendar.jar=D:\\github\\RSCalendar.jar
+file.reference.RSCalendar.jar-1=D:\\mon hoc\\NetBean\\Libraries\\RSCalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +52,11 @@ javac.classpath=\
     ${file.reference.RSCalendar.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.RSCalendar.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
