--- a/3.LibManagementApp/nbproject/private/private.properties
+++ b/3.LibManagementApp/nbproject/private/private.properties
@@ -10,4 +10,4 @@ file.reference.RSCalendar.jar=D:\\github\\Libraries\\RSCalendar.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ADMIN\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\19\\build.properties
