--- a/3.LibManagementApp/nbproject/project.properties
+++ b/3.LibManagementApp/nbproject/project.properties
@@ -37,8 +37,10 @@ endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.23.jar=D:\\github\\jfreechart\\jcommon-1.0.23.jar
 file.reference.jcommon-1.0.23.jar-1=D:\\github\\Libraries\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-2=E:\\Libraries\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\github\\jfreechart\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-1=D:\\github\\Libraries\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-2=E:\\Libraries\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\mon hoc\\NetBean\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=D:\\github\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.RSCalendar.jar=D:\\github\\RSCalendar.jar
@@ -52,7 +54,9 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar-1}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-2}:\
+    ${file.reference.jfreechart-1.0.19.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
