--- a/3.LibManagementApp/nbproject/project.properties
+++ b/3.LibManagementApp/nbproject/project.properties
@@ -50,6 +50,7 @@ file.reference.jfreechart-1.0.19.jar-2=E:\\Libraries\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\mon hoc\\NetBean\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=D:\\github\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-2=D:\\mon hoc\\NetBean\\Libraries\\mysql-connector-j-9.1.0.jar
+file.reference.RojeruSan.parte1.jar=D:\\github\\RojeruSan.parte1.jar
 file.reference.RSCalendar.jar=D:\\github\\RSCalendar.jar
 file.reference.RSCalendar.jar-1=D:\\mon hoc\\NetBean\\Libraries\\RSCalendar.jar
 includes=**
@@ -61,7 +62,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.RojeruSan.parte1.jar}
     ${file.reference.RSCalendar.jar-1}:\
     ${file.reference.jcommon-1.0.23.jar-1}:\
     ${file.reference.jfreechart-1.0.19.jar-1}:\
