--- a/3.LibManagementApp/nbproject/project.properties
+++ b/3.LibManagementApp/nbproject/project.properties
@@ -73,7 +73,7 @@ file.reference.RSFoto_v1.0.jar-1=RScomponent jars\\RSFoto_v1.0.jar
 file.reference.RSTableMetro.jar=C:\\Users\\Duc Anh\\Desktop\\me\\N\u0103m 4\\K\u1ef3 1\\N\u1eeda sau\\Ph\u00e1t tri\u1ec3n ph\u1ea7n m\u1ec1m \u1ee9ng d\u1ee5ng\\FileJarRS\\RSTableMetro.jar
 file.reference.RSTableMetro.jar-1=RScomponent jars\\RSTableMetro.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
     ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
@@ -155,7 +155,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=3.LibManagementApp
-main.class=common.view.Test0
+main.class=common.view.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
